kubernates/chat-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chat-service
  namespace: corporatechat
  labels:
    app: chat-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chat-service
  template:
    metadata:
      labels:
        app: chat-service
    spec:
      containers:
        - name: chat-service
          image: ravencraft568/chat-service:v26
          ports:
            - containerPort: 3004
          volumeMounts:
            - name: kafka-ca
              mountPath: /app/certs
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 45
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3004
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: kafka-ca
          secret:
            secretName: kafka-ca-cert

---
apiVersion: v1
kind: Service
metadata:
  name: chat-service
  namespace: corporatechat
spec:
  selector:
    app: chat-service
  ports:
    - port: 3004
      targetPort: 3004
      protocol: TCP
  type: ClusterIP
