kubernates/meeting-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: meeting-service
  namespace: corporatechat
  labels:
    app: meeting-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: meeting-service
  template:
    metadata:
      labels:
        app: meeting-service
    spec:
      containers:
        - name: meeting-service
          image: ravencraft568/meeting-service:v29
          ports:
            - containerPort: 3005
          volumeMounts:
            - name: kafka-ca
              mountPath: /app/certs
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 45
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /health
              port: 3005
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: kafka-ca
          secret:
            secretName: kafka-ca-cert

---
apiVersion: v1
kind: Service
metadata:
  name: meeting-service
  namespace: corporatechat
spec:
  selector:
    app: meeting-service
  ports:
    - port: 3005
      targetPort: 3005
      protocol: TCP
  type: ClusterIP
