kubernates/user-management-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-service
  namespace: corporatechat
  labels:
    app: user-management-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-management-service
  template:
    metadata:
      labels:
        app: user-management-service
    spec:
      containers:
        - name: user-management-service
          image: ravencraft568/user-management-service:v26
          ports:
            - containerPort: 3002
          volumeMounts:
            - name: kafka-ca
              mountPath: /app/certs
              readOnly: true
          resources:
            requests:
              memory: "256Mi"
              cpu: "250m"
            limits:
              memory: "512Mi"
              cpu: "500m"
          livenessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 45
            periodSeconds: 10

          readinessProbe:
            httpGet:
              path: /health
              port: 3002
            initialDelaySeconds: 15
            periodSeconds: 5
      volumes:
        - name: kafka-ca
          secret:
            secretName: kafka-ca-cert

---
apiVersion: v1
kind: Service
metadata:
  name: user-management-service
  namespace: corporatechat
spec:
  selector:
    app: user-management-service
  ports:
    - port: 3002
      targetPort: 3002
      protocol: TCP
  type: ClusterIP
